--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="weather/index.css">
     </head>
     <body>
         <div class="container">
@@ -25,7 +25,7 @@
         </div>
         
 
-        <script src="./index.js"></script>
+        <script src="weather/index.js"></script>
        
     </body>
 </html>
